Fixed multiple CSS layout issues.

--- a/static/styles/card.css
+++ b/static/styles/card.css
@@ -22,7 +22,7 @@ body {
 }
 
 .card-content {
-    padding: 1.4em;
+    padding: 1px;
 }
 
 .card-content h2 {
