--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,20 +1,39 @@
-/*
-* {
-    box-sizing: border-box;
-}*/
-
 
 body {
     margin: 0;
 }
 
 body {
-        font-family: Helvetica, Verdana, sans-serif; 
+    font: Helvetica, Verdana, sans-serif; 
 }
 
 p {
     margin: 4px;
     padding: 2px;
+}
+
+h1, h2 {
+    margin: 4px;
+}
+
+blockquote {
+    background: #00e1ff;
+    border-left: 10px solid #ff00b2;
+    margin: 1.5em 10px;
+    padding: 0.5em 10px;
+}
+
+blockquote p {
+    display: inline;
+}
+
+main {
+    text-align: left;
+}
+
+.body-content {
+    display: inline-block;
+    font: 18px/1.5 Helvetica, Verdana, sans-serif;
 }
 
 table, th, td {
@@ -46,4 +65,9 @@ section {
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.img-badge {
+    float: left;
+    margin-right: 0.5em;
 }
